force-app/main/default/objects/SVMXC__Allocated_Stock__c/SVMXC__Allocated_Stock__c.object-meta.xml
<CustomObject>
    <description>Allocated Stock details are captured in this object.</description>
    <label>Allocated Stock</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocated Stocks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>