force-app/main/default/objects/SVMXC__Allocated_Stock__c/fields/Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Batch_Number__c</fullName>
    <description>To hold the batch number from Work Detail record via  debrief functionality</description>
    <label>Batch Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>