force-app/main/default/objects/SVMXC__Allocated_Stock__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To hold the consumed from location from the work detail record via debrief functionality</description>
    <label>Location</label>
    <referenceTo>SVMXC__Site__c</referenceTo>
    <relationshipLabel>Allocated Stocks</relationshipLabel>
    <relationshipName>Allocated_Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>