force-app/main/default/objects/SVMXC__Allocated_Stock__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To hold the product lookup from Work Detail record via debrief functionality</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Allocated Stocks</relationshipLabel>
    <relationshipName>Allocated_Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>