force-app/main/default/objects/SVMXC__Allocated_Stock__c/fields/SVMX_PS_VS_Stocked_Serial__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_VS_Stocked_Serial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is reference of Stock Serial which is allocated.</description>
    <inlineHelpText>This is reference of Stock Serial which is allocated.</inlineHelpText>
    <label>Stocked Serial</label>
    <referenceTo>SVMXC__Product_Serial__c</referenceTo>
    <relationshipLabel>Allocated Stocks (Stocked Serial)</relationshipLabel>
    <relationshipName>SVMX_PS_VS_Stocked_Serial</relationshipName>
    <type>Lookup</type>
</CustomField>