force-app/main/default/objects/SVMXC__Allocated_Stock__c/fields/SVMX_PS_VS_Work_Detail__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_VS_Work_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is reference of Work Detail which is allocated.</description>
    <inlineHelpText>This is reference of Work Detail which is allocated.</inlineHelpText>
    <label>Work Detail</label>
    <referenceTo>SVMXC__Service_Order_Line__c</referenceTo>
    <relationshipLabel>Allocated Stocks (Work Detail)</relationshipLabel>
    <relationshipName>SVMX_PS_VS_Work_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>