force-app/main/default/objects/SVMXC__Allocated_Stock__c/fields/SVMXC__Product_Stock__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Product_Stock__c</fullName>
    <label>Product Stock</label>
    <referenceTo>SVMXC__Product_Stock__c</referenceTo>
    <relationshipLabel>Allocated Stocks</relationshipLabel>
    <relationshipName>Allocated_Stocks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>