force-app/main/default/objects/SVMXC__Allocated_Stock__c/fields/SVMXC__Sales_Repair_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Sales_Repair_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales/Repair Order Line</label>
    <referenceTo>SVMXC__RMA_Shipment_Line__c</referenceTo>
    <relationshipLabel>Allocated Stocks (Sales/ Repair Order Line)</relationshipLabel>
    <relationshipName>Sales_Repair_Order_Line</relationshipName>
    <type>Lookup</type>
</CustomField>