force-app/main/default/objects/SVMXC__Allocated_Stock__c/fields/SVMXC__Shipment_Order__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Shipment_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment Order</label>
    <referenceTo>SVMXC__RMA_Shipment_Order__c</referenceTo>
    <relationshipLabel>Allocated Stocks</relationshipLabel>
    <relationshipName>Shipment_Order</relationshipName>
    <type>Lookup</type>
</CustomField>