force-app/main/default/objects/SVMXC__Allocated_Stock__c/fields/SVMXC__Shipped_Qty__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Shipped_Qty__c</fullName>
    <label>Shipped Qty</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>