force-app/main/default/objects/SVMXC__Allocated_Stock__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To hold the Work Order lookup from the Work Detail record via debrief functionality</description>
    <label>Work Order</label>
    <referenceTo>SVMXC__Service_Order__c</referenceTo>
    <relationshipLabel>Allocated Stocks</relationshipLabel>
    <relationshipName>Allocated_Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>